[package]
authors = [
    "Silvia O'Dwyer <silviaodwyerdev@gmail.com>",
    "David Manca <manca@spravazeleznic.cz",
]
categories = ["wasm", "multimedia"]
description = "High-performance image processing library for native use and the web"
license = "Apache-2.0"
name = "photon-rs"
readme = "./README.md"
repository = "https://github.com/medzernik/photon"
version = "0.3.3"
edition = "2021"
exclude = ["pkg/*", "examples/input_images/*"]
homepage = "https://silvia-odwyer.github.io/photon/"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = { version = "0.25", default-features = false, features = [
    "gif",
    "jpeg",
    "ico",
    "png",
    "pnm",
    "tga",
    "tiff",
    "webp",
    "bmp",
    "hdr",
    "dds",
] }
palette = "0.7"
rand = "0.8"
imageproc = { version = "0.25", default-features = false }
rusttype = "0.9"
base64 = "0.22"
time = "0.3"
wasm-bindgen = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
js-sys = { version = "0.3", optional = true }
node-sys = { version = "0.4", optional = true }
perlin2d = "0.2"
instant = "0.1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4", optional = true }
ab_glyph = "0.2"

[dev-dependencies]
time = "0.3"
criterion = "0.5"

[[bench]]
name = "photon_benchmark"
harness = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "CanvasRenderingContext2d",
    "ImageData",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "console",
    'CssStyleDeclaration',
    'EventTarget',
    "Blob",
]
optional = true

[features]
default = ["enable_wasm"]
enable_wasm = [
    "wasm-bindgen",
    "web-sys",
    "js-sys",
    "node-sys",
    "console_error_panic_hook",
]
